# startup

./: .clang-tidy  CMakeLists.txt
cmake/: base.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cc  app.h
src/main/: CMakeLists.txt  main.cc
